# CharacterDetectionCalculatorAPP

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JNIDriver.c  JNILEDDriver.c  JNISegmentDriver.c  OpenCLDriver.c  native-lib.cpp
app/src/main/java/com/example/calculator/: CameraSurfaceView.java  JNIDriver.java  JNIListener.java  MainActivity.java  calc.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
